fix: when campaigns don't exist in DB against pilotage API, do not throw exceptions